# tersus

./: .gitignore  Application.hs  Foundation.hs  LICENSE  Model.hs  README.md  Settings.hs  devel.hs  main.hs  sources.txt  tersus.cabal
Handler/: Admin.hs  Applications.hs  Files.hs  Home.hs  JavascriptAPI.hs  Messages.hs  Permission.hs  TApplication.hs  TFile.hs  User.hs
Handler/TApplication/: Git.hs
MessagingPipeline/: Pipeline.hs
Model/: AuthMessages.hs  TApplication.hs  TMessage.hs  TersusResult.hs  TersusResultCode.hs  User.hs
TFile/: FilesystemUtils.hs  OSUtils.hs
Tersus/: AccessKeys.hs  Auth.hs  Cluster.hs  DataTypes.hs  Database.hs  Debug.hs  Filesystem.hs  Global.hs  HandlerMachinery.hs  Responses.hs  TApplications.hs  TFiles.hs  User.hs  Users.hs
Tersus/Cluster/: DummyImports.hs  MessageBackend.hs  MessageFrontend.hs  TersusNotificationsApp.hs  TersusService.hs  TersusServiceApp.hs  Types.hs
Tersus/DataTypes/: #Messaging.hs#  #TApplication.hs#  .#TApplication.hs  Address.hs  Application.hs  Messaging.hs  Permission.hs  Responses.hs  TApplication.hs  TError.hs  TFile.hs  TypeSynonyms.hs  User.hs
Tersus/DataTypes/Messaging/: Util.hs
Tersus/Filesystem/: Resources.hs
Tersus/TFiles/: Permissions.hs
Tersus/Yesod/: Handler.hs  Persistent.hs
TersusCluster/: Cluster.hs  DummyImports.hs  MessageBackend.hs  Types.hs
config/: models  mongodb.yml  postgres.yml  routes  servers  servers2  settings.yml  sqlite.yml
deploy/: Procfile
messages/: en.msg
static/: tersusland.js
templates/: about.hamlet  default-layout-wrapper.hamlet  default-layout.hamlet  default-layout.julius  homepage.hamlet  homepage.julius
templates/TApplication/: application-root.hamlet  created.hamlet  register.hamlet  registerFormWidget.hamlet  registerFormWidget.julius  registerFormWidget.lucius
templates/admin/: applications.hamlet  applications.julius  applications.lucius  dashboard.hamlet
templates/admin/TApplication/: edit.hamlet  manageTAppAdminsWidget.hamlet  manageTAppAdminsWidget.julius
templates/help/: support.hamlet
templates/r/: list_files.hamlet
templates/user/: preferences.hamlet
tests/: main.hs
