name:              tersus
version:           1.0
license:           BSD3
license-file:      LICENSE
author:            Carlos López Camey <c.lopez@kmels.net>, Ernesto Rodríguez <neto@netogallo.me>
maintainer:        Carlos López Camey <c.lopez@kmels.net>, Ernesto Rodríguez <neto@netogallo.me>
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://tersus.yesodweb.com/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home
                     Handler.TFile
                     TFile.FilesystemUtils
                     Handler.Messages
                     Model.TersusResult
                     Model.TMessage
                     Handler.TApplication
                     TersusCluster.Cluster
                     TersusCluster.Types
                     TersusCluster.MessageBackend

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0
    else
        ghc-options:   -Wall -threaded -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                TypeSynonymInstances
                FlexibleInstances

    build-depends: base                          >= 4          && < 5
                 , AES                           >= 0.2.8
                 , time                          >= 1.1.4
                 , yesod-platform                >= 1.0        && < 1.1
                 , yesod                         >= 1.0        && < 1.1
                 , yesod-core                    >= 1.0        && < 1.1
                 , yesod-auth                    >= 1.0        && < 1.1
                 , yesod-static                  >= 1.0        && < 1.1
                 , yesod-default                 >= 1.0        && < 1.1
                 , yesod-form                    >= 1.0        && < 1.1
                 , yesod-test                    >= 0.2        && < 0.3
                 , clientsession                 >= 0.7.3      && < 0.8
                 , bytestring                    >= 0.9        && < 0.10
                 , text                          >= 0.11       && < 0.12
                 , persistent                    >= 0.9        && < 0.10
                 , persistent-postgresql     >= 0.9        && < 0.10
                 , template-haskell
                 , hamlet                        >= 1.0        && < 1.1
                 , shakespeare-css               >= 1.0        && < 1.1
                 , shakespeare-js                >= 1.0        && < 1.1
                 , shakespeare-text              >= 1.0        && < 1.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 1.2        && < 1.3
                 , yaml                          >= 0.7        && < 0.8
                 , http-conduit                  >= 1.4        && < 1.5
                 , directory                     >= 1.1        && < 1.2
                 , warp                          >= 1.2        && < 1.3
--added by kmels
                 , Crypto                        >= 4.2.5
                 , utf8-string                   >= 0.3.7
                 , random                        >= 1.0.1
--added by neto
                 , aeson                         >= 0.6.0.0                 
                 , remote                        >= 0.1.1
                 , binary                        >= 0.5.1
                 , mtl                           >= 2.1
                 , MissingH                      >= 1.1.1.0
                 , array                         >= 0.4.0.0
                 , stm                           >= 2.3
                 , unix                          >= 2.5

executable         tersus
    if flag(library-only)
        Buildable: False

    main-is:           ../main.hs
    hs-source-dirs:    dist
    build-depends:     base
                     , tersus
                     , yesod-default

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall
    extensions:        TemplateHaskell
                       QuasiQuotes
                       OverloadedStrings
                       NoImplicitPrelude
                       CPP
                       OverloadedStrings
                       MultiParamTypeClasses
                       TypeFamilies
                       GADTs
                       GeneralizedNewtypeDeriving
                       FlexibleContexts

    build-depends: base
                 , tersus
                 , yesod-test
                 , yesod-default
                 , yesod-core
