name:              tersus
version:           1.0
license:           BSD3
license-file:      LICENSE
author:            Carlos López Camey <c.lopez@kmels.net>, Ernesto Rodríguez <neto@netogallo.me>
maintainer:        Carlos López Camey <c.lopez@kmels.net>, Ernesto Rodríguez <neto@netogallo.me>
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://tersus.yesodweb.com/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Model.TersusResult
                     Model.TersusResultCode
                     Model.TMessage
                     Model.User
                     Model.TApplication
                     Model.AuthMessages
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     TFile.FilesystemUtils
                     Handler.Home
                     Handler.Messages
                     Handler.JavascriptAPI
                     Handler.TApplication
                     Handler.TApplication.Git
                     Handler.TFile
                     Handler.User
                     Tersus.AccessKeys
                     Tersus.Cluster
                     Tersus.Cluster.Types
                     Tersus.Cluster.MessageBackend
                     Tersus.Cluster.DummyImports
                     Tersus.Cluster.TersusService
                     Tersus.Cluster.TersusServiceApp
                     Tersus.Global                     

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0
    else
        ghc-options:   -Wall -threaded -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                TypeSynonymInstances
                FlexibleInstances

    build-depends: base                          >= 4          && < 5
                 , AES                           >= 0.2.8
                 , time                          >= 1.1.4
                 , yesod-platform                >= 1.1        && < 1.2
                 , yesod                         >= 1.1        && < 1.2
                 , yesod-core                    >= 1.1        && < 1.2
                 , yesod-auth                    >= 1.1        && < 1.2
                 , yesod-static                  >= 1.1        && < 1.2
                 , yesod-default                 >= 1.1        && < 1.2
                 , yesod-form                    >= 1.1        && < 1.2
                 , yesod-test                    >= 0.3        && < 0.4
                 , clientsession                 >= 0.8      && < 0.9
                 , bytestring                    >= 0.9        && < 0.10
                 , text                          >= 0.11       && < 0.12
                 , persistent                    >= 1.0        && < 1.1
                 , persistent-postgresql         >= 1.0        && < 1.1
                 , template-haskell
                 , hamlet                        >= 1.1        && < 1.2
                 , shakespeare-css               >= 1.0        && < 1.1
                 , shakespeare-js                >= 1.0        && < 1.1
                 , shakespeare-text              >= 1.0        && < 1.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 1.3        && < 1.4
                 , yaml                          >= 0.7        && <= 0.8.1
                 , http-conduit                  >= 1.5        && < 1.7        
                 , directory                     >= 1.1        && < 1.2
                 , warp                          >= 1.3        && < 1.4                 
                 , data-default
--added by kmels
                 , Crypto                        >= 4.2.5
                 , utf8-string                   >= 0.3.7
                 , random                        >= 1.0.1
                 , process-conduit               >= 0.4.1
                 , conduit                       >= 0.4.2
                 , split                         >= 0.1.4.3
                 , base16-bytestring             >= 0.1.1.4
                 , transformers                  >= 0.2
                 , http-types                    >= 0.6.11
                 , yesod-json                    >= 1.1        && < 1.2
--added by neto
                 , aeson                         >= 0.6.0.0                 
                 , remote                        >= 0.1.1
                 , binary                        >= 0.5.1
                 , mtl                           >= 2.0.0.0
                 , MissingH                      >= 1.1.1.0
                 , array                         >= 0.4.0.0
                 , stm                           >= 2.3
                 , unix                          >= 2.5.1
                 , MaybeT                        >= 0.1

executable         tersus
    if flag(library-only)
        Buildable: False

    main-is:           ../main.hs
    hs-source-dirs:    dist
    build-depends:     base
                     , tersus
                     , yesod-default

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall
    extensions:        TemplateHaskell
                       QuasiQuotes
                       OverloadedStrings
                       NoImplicitPrelude
                       CPP
                       OverloadedStrings
                       MultiParamTypeClasses
                       TypeFamilies
                       GADTs
                       GeneralizedNewtypeDeriving
                       FlexibleContexts

    build-depends: base
                 , tersus
                 , yesod-test
                 , yesod-default
                 , yesod-core
