name:              tersus
version:           0.2
license:           BSD3
license-file:      LICENSE
author:            Carlos López Camey <c.lopez@kmels.net>, Ernesto Rodríguez <neto@netogallo.me>
maintainer:        Carlos López Camey <c.lopez@kmels.net>, Ernesto Rodríguez <neto@netogallo.me>
synopsis:          We believe Open Source is progress
description:       A web platform that provides applications a file system and a messaging system with other applications.
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://tersus.yesodweb.com/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Admin
                     Handler.Files
                     Handler.Home
                     Handler.Messages
                     Handler.Permission 
                     Handler.Applications
                     Handler.TApplication.Git
                     Handler.User
                     Tersus.AccessKeys
                     Tersus.Auth
                     Tersus.Cluster
                     Tersus.Cluster.Types
                     Tersus.Cluster.MessageBackend
                     Tersus.Cluster.TersusService
                     Tersus.Cluster.TersusServiceApp
                     Tersus.Cluster.TersusNotificationsApp
                     Tersus.DataTypes
                     Tersus.DataTypes.Address
                     Tersus.DataTypes.Messaging
                     Tersus.DataTypes.Messaging.Util
                     Tersus.DataTypes.Permission
                     Tersus.DataTypes.Responses
                     Tersus.DataTypes.TApplication
                     Tersus.DataTypes.TError
                     Tersus.DataTypes.TFile
                     Tersus.DataTypes.TypeSynonyms
                     Tersus.DataTypes.User
                     Tersus.Database
                     Tersus.TApplications
                     Tersus.Filesystem
                     Tersus.Global
                     Tersus.TFiles
                     Tersus.Responses
                     Tersus.Yesod.Handler

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0
    else
        ghc-options:   -Wall -threaded -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                TypeSynonymInstances
                FlexibleInstances

    build-depends: base                          >= 4          && < 5
                 , AES                           >= 0.2.8
                 , time                          >= 1.4
                 , directory                     >= 1.1        && < 1.2
                 , bytestring                    >= 0.9        && < 0.10
                 , text                          >= 0.11       && < 0.12
-- yesod-platform & dependencies
                 , yesod-platform                == 1.1.7.1
                 , yesod                         == 1.1.7.2
                 , yesod-core                    == 1.1.7.1
                 , yesod-auth                    == 1.1.3
                 , yesod-static                  == 1.1.1.2
                 , yesod-default                 == 1.1.3
                 , yesod-form                    == 1.2.0.2
                 , yesod-test                    == 0.3.3
                 , aeson                         == 0.6.1.0
                 , ansi-terminal                 == 0.5.5.1
                 , attoparsec                    == 0.10.3.0
                 , authenticate                  == 1.3.2
                 , base64-bytestring             == 1.0.0.0
                 , blaze-builder                 == 0.3.1.0
                 , http-types                    == 0.7.3.0.1
                 , case-insensitive              == 0.4.0.4
                 , classy-prelude                == 0.4.3
                 , classy-prelude-conduit        == 0.4.3
                 , conduit                       == 0.5.6
                 , clientsession                 == 0.8.1
                 , email-validate                == 0.3.2
                 , project-template              == 0.1.1
                 , template-haskell
                 , hamlet                        == 1.1.3.1
                 , shakespeare-css               == 1.0.2
                 , shakespeare-js                == 1.1.1
                 , shakespeare-text              == 1.0.0.5
                 , hjsmin                        == 0.1.4
                 , mime-types                    == 0.1.0.2
                 , monad-control                 == 0.3.1.4
                 , wai-extra                     == 1.3.2
                 , yaml                          == 0.8.2
                 , http-conduit                  == 1.8.7
                 , safe                          == 0.3.3
                 , split                         == 0.2.1.1
                 , utf8-string                   == 0.3.7
                 , warp                          == 1.3.7.1
                 , yesod-json                    == 1.1.2
                 , data-default
                 , wai-test                      == 1.3.0
                 , shakespeare                   == 1.0.2
                 , tls                           == 1.1.1
                 , wai                           == 1.3.0.1
                 , hashable                      == 1.1.2.5
                 , hspec                         == 1.4.3
--meta (to avoid dependency hell)
                 , parsec                        == 3.1.3
                 , network                       == 2.3.2.0
                 , regex-base                    == 0.93.2
                 , HUnit                         == 1.2.5.1
                 , base64-conduit                == 0.5.1
                 , monad-logger                  == 0.2.3.2		 
--added by kmels                 
                 , random                        >= 1.0.1
                 , process-conduit               >= 0.4.1
                 , extensible-exceptions         >= 0.1.1.4
                 , regex-tdfa	                 >= 1.1.8
                 , hedis                         >= 0.6.2
                 , either                        >= 3.1
                 , transformers                  >= 0.2.0.0
--added by neto
                 , distributed-process           >= 0.4.1 && <= 0.4.2
                 , distributed-process-simplelocalnet >= 0.2.0.8
                 , binary                        >= 0.5.1.0
                 , mtl                           >= 2.0.0.0
                 , MissingH                      >= 1.1.1.0
                 , array                         >= 0.3.0.0
                 , stm                           >= 2.3
                 , unix                          >= 2.5.1
                 , MaybeT                        >= 0.1.0
                 , wai-eventsource               >= 1.3.0.0
                 , safecopy                      >= 0.7.1
                 , acid-state                    >= 0.8.1
                 , ixset                         >= 1.0.5
                 , resourcet                     >= 0.4.4
                 , hashtables                    >= 1.0.1.8

executable         tersus
    if flag(library-only)
        Buildable: False

    main-is:           ../main.hs
    hs-source-dirs:    dist
    build-depends:     base
                     , tersus
                     , yesod-default

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall
    extensions:        TemplateHaskell
                       QuasiQuotes
                       OverloadedStrings
                       NoImplicitPrelude
                       CPP
                       OverloadedStrings
                       MultiParamTypeClasses
                       TypeFamilies
                       GADTs
                       GeneralizedNewtypeDeriving
                       FlexibleContexts

    build-depends: base
                 , hspec
                 , tersus
                 , yesod-test
                 , yesod-default
                 , yesod-core
